#77501 - Fix modal height on mobile

--- a/Snowdog_Components/components/Organisms/modal/_modal-variables.scss
+++ b/Snowdog_Components/components/Organisms/modal/_modal-variables.scss
@@ -21,6 +21,7 @@ $modal__border                               : 0 !default;
 //modal container
 $modal__container-width                      : calc(100% - (2 * #{$spacer--medium})) !default;
 $modal__container-max-width                  : 900px !default;
+$modal__container-max-height                 : calc(100vh - (2 * #{$spacer--medium})) !default;
 $modal__container-padding                    : $spacer--semi-large $spacer--medium !default;
 $modal__container-padding\@medium            : $spacer--semi-large !default;
 $modal__container-background-color           : $white !default;
