--- a/Snowdog_Components/components/Organisms/modal/_modal.scss
+++ b/Snowdog_Components/components/Organisms/modal/_modal.scss
@@ -62,12 +62,13 @@
         display: block;
         width: $modal__container-width;
         max-width: $modal__container-max-width;
-        max-height: 100%;
+        max-height: $modal__container-max-height;
         padding: $modal__container-padding;
         border: $modal__container-border;
         box-shadow: $modal__container-box-shadow;
         background-color: $modal__container-background-color;
         animation: $modal__container-animation;
+        overflow: auto;
 
         @include mq($screen-m) {
             padding: $modal__container-padding\@medium;
